--- a/index.html
+++ b/index.html
@@ -4,7 +4,41 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/fonts/fonts.css">
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header content-section ">
+      <nav class="header__menu">
+        <ul class="header__menu-list">
+          <li class="header__menu-item header__menu-item_activ">
+            <a class="header__menu-link">главная</a>
+          </li>
+          <li class="heder__menu-item header__menu-item">
+            <a class="header__menu-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="heder__menu-item header__menu-item">
+            <a class="header__menu-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo">
+        <img
+          class="header__logo-image"
+          src="/images/logo-black.svg"
+          alt="Логотип проекта"
+        />
+      </a>
+      <address class="addres__text">
+        <a class="tel" href="tel:+9 999 555 5555">+9 999 555 5555</a><br>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
+        <a>наб. Принсенграхт 263-265, Амстердам</a>
+      </address>
+      
+    </header>
+
+
+  </body>
 </html>
