--- a/index.html
+++ b/index.html
@@ -37,22 +37,24 @@
   </header>
   <main>
     <section class="cover">
-      <div class="overlay">
-        <div class="fog">
-      <h1 class="cover__title">
-        <span class="aligned-text"><span>о</span><span class="letter-spacing-extended">н</span><span>о</span></span>
-        <span class="aligned-text_center"><span>те</span><span class="letter-spacing-extended">бе</span></span>
-        <span class="aligned-text_right"><span class="letter-spacing-extended">н</span><span>ад</span><span
-            class="no-letter-spacing">о</span></span>
+      <div class="overlay"></div>
+        <h1 class="cover__title">
+        <span class="aligned-text"><span>о</span>
+        <span class="letter-spacing-extended">н</span>
+        <span>о</span></span>
+        <span class="aligned-text_center"><span>те</span>
+        <span class="letter-spacing-extended">бе</span>
+      </span>
+        <span class="aligned-text_right"><span class="letter-spacing-extended">н</span><span>ад</span><class=></class="no-letter-spacing">о</span></span>
       </h1>
       <div class="cover__description">
         <p class="cover__description-text">
           Аукцион вещей, в которые никто не верил
         </p>
         <button type="button" class="bet-button">Сделать ставку</button>
-      </div>
+      
     </div>
-  </div>
+
     </section>
   </main>
 </body>
