--- a/index.html
+++ b/index.html
@@ -1,44 +1,63 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/fonts/fonts.css">
-    <link rel="stylesheet" href="/styles/global.css">
-    <link rel="stylesheet" href="/styles/style.css">
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body>
-    <header class="header content-section ">
-      <nav class="header__menu">
-        <ul class="header__menu-list">
-          <li class="header__menu-item header__menu-item_activ">
-            <a class="header__menu-link">главная</a>
-          </li>
-          <li class="heder__menu-item header__menu-item">
-            <a class="header__menu-link" href="#0">посмотреть лоты</a>
-          </li>
-          <li class="heder__menu-item header__menu-item">
-            <a class="header__menu-link" href="#0">об аукционе</a>
-          </li>
-        </ul>
-      </nav>
-      <a class="header__logo">
-        <img
-          class="header__logo-image"
-          src="/images/logo-black.svg"
-          alt="Логотип проекта"
-        />
-      </a>
-      <address class="addres__text">
-        <a class="tel" href="tel:+9 999 555 5555">+9 999 555 5555</a><br>
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-        <a>наб. Принсенграхт 263-265, Амстердам</a>
-      </address>
-      
-    </header>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/fonts/fonts.css">
+  <link rel="stylesheet" href="/styles/global.css">
+  <link rel="stylesheet" href="/styles/style.css">
+  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+</head>
 
-  </body>
+<body>
+  <header class="header">
+    <nav class="header__menu">
+      <ul class="header__links-list">
+        <li class="header__links-list-item header__links-list-item_no-bullit">
+          <a class="header__link header__link_active">главная</a>
+        </li>
+        <li class="header__links-list-item">
+          <a class="header__link" href="#0">посмотреть лоты</a>
+        </li>
+        <li class="header__links-list-item">
+          <a class="header__link" href="#0">об аукционе</a>
+        </li>
+      </ul>
+    </nav>
+    <a class="header__logo">
+      <img class="header__logo-image" src="/images/logo-black.svg" alt="Логотип проекта оно тебе надо" />
+    </a>
+    <address class="address">
+      <a href="tel:+99995555555">+9 999 555 5555</a>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <p>наб. Принсенграхт 263-265, Амстердам</p>
+    </address>
+  </header>
+  <main>
+    <section class="cover">
+      <div class="overlay">
+        <h1 class="cover__title">
+        <span class="align__left">оно</span>
+        <span class="align__center">тебе</span>
+        <span class="align__right">надо</span>
+        </h1>
+      <div class="cover__description">
+        <p class="cover__description-text">
+          Аукцион вещей, в которые никто не верил
+        </p>
+        <button type="button" class="bet-button">Сделать ставку</button>
+      </div>
+    </div>
+
+    </section>
+  </main>
+</body>
+
+</html>
+</main>
+
+</body>
+
 </html>
