--- a/index.html
+++ b/index.html
@@ -1,67 +1,97 @@
 <!DOCTYPE html>
-<html lang="ru">
+<lang="ru">
+  </lang>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/fonts/fonts.css">
-  <link rel="stylesheet" href="/styles/global.css">
-  <link rel="stylesheet" href="/styles/style.css">
-  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/fonts/fonts.css">
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="/styles/style.css">
+    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+  </head>
 
-<body>
-  <header class="header">
-    <nav class="header__menu">
-      <ul class="header__links-list">
-        <li class="header__links-list-item header__links-list-item_no-bullit">
-          <a class="header__link header__link_active">главная</a>
-        </li>
-        <li class="header__links-list-item">
-          <a class="header__link" href="#0">посмотреть лоты</a>
-        </li>
-        <li class="header__links-list-item">
-          <a class="header__link" href="#0">об аукционе</a>
-        </li>
-      </ul>
-    </nav>
-    <a class="header__logo">
-      <img class="header__logo-image" src="/images/logo-black.svg" alt="Логотип проекта оно тебе надо" />
-    </a>
-    <address class="address">
-      <a href="tel:+99995555555">+9 999 555 5555</a>
-      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-      <p>наб. Принсенграхт 263-265, Амстердам</p>
-    </address>
-  </header>
-  <main>
-    <section class="cover">
-      <div class="overlay"></div>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo">
+        <img class="header__logo-image" src="/images/logo-black.svg" alt="Логотип проекта оно тебе надо" />
+      </a>
+      <address class="address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
         <h1 class="cover__title">
-        <span class="aligned-text"><span>о</span>
-        <span class="letter-spacing-extended">н</span>
-        <span>о</span></span>
-        <span class="aligned-text_center"><span>те</span>
-        <span class="letter-spacing-extended">бе</span>
-      </span>
-        <span class="aligned-text_right"><span class="letter-spacing-extended">н</span><span>ад</span><class=></class="no-letter-spacing">о</span></span>
-      </h1>
-      <div class="cover__description">
-        <p class="cover__description-text">
-          Аукцион вещей, в которые никто не верил
-        </p>
-        <button type="button" class="bet-button">Сделать ставку</button>
-      
-    </div>
+          <span class="align__left">он</span><span class="align__left align__left-span">о</span>
+          <span class="align__center">теб</span><span class="align__center align__center-span">е</span>
+          <span class="align__right">н</span><span class="align__right align__right-span">адо</span>
+        </h1>
+        <div class="cover__description">
+          <h3 class="cover__description-text">Аукцион вещей, в которые никто не верил</h3>
+          <button type="button" class="bet__button">Сделать ставку</button>
+        </div>
+      </section>
+      <section class="lots">
+        <h2 class="lots__heading">ЛОТЫ</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <div class="overlay"></div>
+            <article class="card card_type_film">
+                <a class="card__link" href="#0">
+                <h2 class="card__title">Фильм режиссёра, который бросил киношколу</h2></a>
+                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не
+                  знали, что режиссёр — Пол Томас Андерсон?</p>
+                
+            </article>
+          </li>
+          <li class="lots__card-list-item">
+            <article class="card card_type_book">
+              <a class="card__link" href="#0">
+                <h2 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h2>
+              </a>
+              <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
+                древнеанглийский.
+                В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы,
+                начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на
+                «Улисса» Джеймса Джойса?</p>
+              </a>
+            </article>
+          </li>
+          <li class="lots__card-list-item">
+            <article class="card card_type_picture">
+              <a class="card__link" href="#0">
+                <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
+                <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
+                  инфузорию-туфельку.
+                  Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из
+                  революционных работ Кандинского?</p>
+              </a>
+            </article>
+          </li>
 
-    </section>
-  </main>
-</body>
+        </ul>
 
-</html>
-</main>
 
-</body>
+      </section>
+    </main>
+  </body>
 
-</html>
+  </html>
