--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
           <button type="button" class="bet__button">Сделать ставку</button>
         </div>
       </section>
+
       <section class="lots">
-        <h2 class="lots__heading">ЛОТЫ</h2>
-        <ul class="lots__card-list">
+                <h2 class="lots__heading">ЛОТЫ</h2>
+                <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <div class="overlay"></div>
             <article class="card card_type_film">
-                <a class="card__link" href="#0">
-                <h2 class="card__title">Фильм режиссёра, который бросил киношколу</h2></a>
-                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не
-                  знали, что режиссёр — Пол Томас Андерсон?</p>
-                
-            </article>
+              <a class="card__link" href="#0">
+                <h2 class="card__title">Фильм режиссёра, который бросил киношколу</h2>
+              </a>
+              <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не
+                знали, что режиссёр — Пол Томас Андерсон?</p>
+              </article>
           </li>
           <li class="lots__card-list-item">
             <article class="card card_type_book">
@@ -72,23 +72,24 @@
                 В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы,
                 начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на
                 «Улисса» Джеймса Джойса?</p>
-              </a>
-            </article>
+               </article>
           </li>
           <li class="lots__card-list-item">
             <article class="card card_type_picture">
               <a class="card__link" href="#0">
                 <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
-                <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
-                  инфузорию-туфельку.
-                  Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из
-                  революционных работ Кандинского?</p>
               </a>
+              <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
+                инфузорию-туфельку.
+                Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из
+                революционных работ Кандинского?</p>
             </article>
+            <div class="overlay"></div>
+            
           </li>
 
         </ul>
-
+        <a class="lots__look-more-link" href="#0">посмотреть больше</a> 
 
       </section>
     </main>
