--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
-    <main>
+    <main class="main">
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
@@ -51,16 +51,16 @@
       </section>
 
       <section class="lots">
-                <h2 class="lots__heading">ЛОТЫ</h2>
-                <ul class="lots__card-list">
+        <h2 class="lots__heading">ЛОТЫ</h2>
+        <ul class="lots__card-list">
+          <!--<div class="overlay"></div>-->
           <li class="lots__card-list-item">
             <article class="card card_type_film">
               <a class="card__link" href="#0">
                 <h2 class="card__title">Фильм режиссёра, который бросил киношколу</h2>
               </a>
-              <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не
-                знали, что режиссёр — Пол Томас Андерсон?</p>
-              </article>
+              <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр  — Пол Томас Андерсон?</p>
+            </article>
           </li>
           <li class="lots__card-list-item">
             <article class="card card_type_book">
@@ -72,7 +72,7 @@
                 В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы,
                 начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на
                 «Улисса» Джеймса Джойса?</p>
-               </article>
+            </article>
           </li>
           <li class="lots__card-list-item">
             <article class="card card_type_picture">
@@ -84,13 +84,29 @@
                 Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из
                 революционных работ Кандинского?</p>
             </article>
-            <div class="overlay"></div>
             
+
           </li>
 
         </ul>
-        <a class="lots__look-more-link" href="#0">посмотреть больше</a> 
+        <a class="lots__look-more-link" href="#0">посмотреть больше</a>
+      </section>
 
+      <section class="about">
+        <div class="about__logo"><img src="/images/logo-white.svg" class="about__logo-img"></div>
+        <div class="about__text">
+          <h2 class="about__title">Об аукционе</h2>
+          <h3 class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
+            Наши лоты вообще не должны были попасть ни на один аукцион.
+            Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому
+            нужны все эти странные вещи, созданные любителями?<br>
+            <br>
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё время.
+            В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными.
+            Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить
+            современную культуру.
+            Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </h3>
+        </div>
       </section>
     </main>
   </body>
