--- a/index.html
+++ b/index.html
@@ -53,38 +53,45 @@
       <section class="lots">
         <h2 class="lots__heading">ЛОТЫ</h2>
         <ul class="lots__card-list">
-          <!--<div class="overlay"></div>-->
           <li class="lots__card-list-item">
-            <article class="card card_type_film">
-              <a class="card__link" href="#0">
+            <a class="card__link" href="#0">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
                 <h2 class="card__title">Фильм режиссёра, который бросил киношколу</h2>
-              </a>
-              <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр  — Пол Томас Андерсон?</p>
-            </article>
+
+                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не
+                  знали, что режиссёр — Пол Томас Андерсон?</p>
+              </article>
+            </a>
           </li>
           <li class="lots__card-list-item">
-            <article class="card card_type_book">
-              <a class="card__link" href="#0">
+            <a class="card__link" href="#0">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
                 <h2 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h2>
-              </a>
-              <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
-                древнеанглийский.
-                В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы,
-                начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на
-                «Улисса» Джеймса Джойса?</p>
-            </article>
+
+                <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
+                  древнеанглийский.
+                  В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили
+                  на
+                  «Улисса» Джеймса Джойса?</p>
+              </article>
+            </a>
           </li>
           <li class="lots__card-list-item">
-            <article class="card card_type_picture">
-              <a class="card__link" href="#0">
+            <a class="card__link" href="#0">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+
                 <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
-              </a>
-              <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
-                инфузорию-туфельку.
-                Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из
-                революционных работ Кандинского?</p>
-            </article>
-            
+
+                <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
+                  инфузорию-туфельку.
+                  Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из
+                  революционных работ Кандинского?</p>
+              </article>
+            </a>
 
           </li>
 
@@ -105,10 +112,50 @@
             В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными.
             Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить
             современную культуру.
-            Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </h3>
+            Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </h3>
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <address class="address address__footer">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265,<br> Амстердам</p>
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__links-list">
+          <li class="footer__links-list-item footer__links-list-item_no-bullit">
+            <a class="footer__link footer__link_active">главная</a>
+          </li>
+          <li class="footer__links-list-item">
+            <a class="footer__link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="footer__links-list-item">
+            <a class="footer__link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a href="#0" class="footer__social-link">
+            <img src="/images/yt.svg" class="footer__social-icon">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="#0" class="footer__social-link">
+            <img src="/images/vk.svg" class="footer__social-icon">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="#0" class="footer__social-link">
+            <img src="/images/pinterest.svg" class="footer__social-icon">
+          </a>
+        </li>
+      </ul>
+
+    </footer>
   </body>
 
   </html>
