--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<lang="ru">
-  </lang>
+<html lang="ru">
 
   <head>
     <meta charset="UTF-8">
@@ -28,7 +27,7 @@
         </ul>
       </nav>
       <a class="header__logo">
-        <img class="header__logo-image" src="/images/logo-black.svg" alt="Логотип проекта оно тебе надо" />
+        <img class="header__logo-image" src="/images/logo-black.svg" alt="Логотип проекта оно тебе надо"/>
       </a>
       <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -100,7 +99,7 @@
       </section>
 
       <section class="about">
-        <div class="about__logo"><img src="/images/logo-white.svg" class="about__logo-img"></div>
+        <div class="about__logo"><img src="/images/logo-white.svg" class="about__logo-img" alt="Логотип проекта, белый"></div>
         <div class="about__text">
           <h2 class="about__title">Об аукционе</h2>
           <h3 class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
@@ -140,17 +139,17 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a href="#0" class="footer__social-link">
-            <img src="/images/yt.svg" class="footer__social-icon">
+            <img src="/images/yt.svg" class="footer__social-icon" alt="Лого Ютуб">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a href="#0" class="footer__social-link">
-            <img src="/images/vk.svg" class="footer__social-icon">
+            <img src="/images/vk.svg" class="footer__social-icon" alt="Лого Вконтакте">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a href="#0" class="footer__social-link">
-            <img src="/images/pinterest.svg" class="footer__social-icon">
+            <img src="/images/pinterest.svg" class="footer__social-icon" alt="Лого Пинтерест">
           </a>
         </li>
       </ul>
