--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </li>
         </ul>
       </nav>
-      <a class="header__logo">
+      <a class="header__logo" href="#0">
         <img class="header__logo-image" src="/images/logo-black.svg" alt="Логотип проекта оно тебе надо"/>
       </a>
       <address class="address">
