--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
-
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/fonts/fonts.css">
-    <link rel="stylesheet" href="/styles/global.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
 
@@ -27,7 +26,11 @@
         </ul>
       </nav>
       <a class="header__logo" href="#0">
-        <img class="header__logo-image" src="/images/logo-black.svg" alt="Логотип проекта оно тебе надо"/>
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип проекта оно тебе надо"
+        />
       </a>
       <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -39,80 +42,106 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="align__left">он</span><span class="align__left align__left-span">о</span>
-          <span class="align__center">теб</span><span class="align__center align__center-span">е</span>
-          <span class="align__right">н</span><span class="align__right align__right-span">адо</span>
+          <span class="align__left">он</span
+          ><span class="align__left align__left-span">о</span>
+          <span class="align__center">теб</span
+          ><span class="align__center align__center-span">е</span>
+          <span class="align__right">н</span
+          ><span class="align__right align__right-span">адо</span>
         </h1>
         <div class="cover__description">
-          <h3 class="cover__description-text">Аукцион вещей, в которые никто не верил</h3>
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
           <button type="button" class="bet__button">Сделать ставку</button>
         </div>
       </section>
 
       <section class="lots">
-        <h2 class="lots__heading">ЛОТЫ</h2>
+        <h2 class="lots__heading">лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <a class="card__link" href="#0">
+            <a class="card__link" href="#0" target="_blank">
               <article class="card card_type_film">
                 <div class="overlay"></div>
-                <h2 class="card__title">Фильм режиссёра, который бросил киношколу</h2>
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
 
-                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не
-                  знали, что режиссёр — Пол Томас Андерсон?</p>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
               </article>
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card__link" href="#0">
+            <a class="card__link" href="#0" target="_blank">
               <article class="card card_type_book">
                 <div class="overlay"></div>
-                <h2 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h2>
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
 
-                <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
-                  древнеанглийский.
-                  В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы,
-                  начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили
-                  на
-                  «Улисса» Джеймса Джойса?</p>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
               </article>
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card__link" href="#0">
+            <a class="card__link" href="#0" target="_blank">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
 
-                <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
 
-                <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
-                  инфузорию-туфельку.
-                  Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из
-                  революционных работ Кандинского?</p>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков… Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
               </article>
             </a>
-
           </li>
-
         </ul>
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
 
       <section class="about">
-        <div class="about__logo"><img src="/images/logo-white.svg" class="about__logo-img" alt="Логотип проекта, белый"></div>
+        <div class="about__logo">
+          <img
+            src="./images/logo-white.svg"
+            class="about__logo-img"
+            alt="Логотип проекта, белый"
+          />
+        </div>
         <div class="about__text">
-          <h2 class="about__title">Об аукционе</h2>
-          <h3 class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
-            Наши лоты вообще не должны были попасть ни на один аукцион.
-            Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому
-            нужны все эти странные вещи, созданные любителями?<br>
-            <br>
-            Слишком сложные или, наоборот, слишком простые. Опережающие своё время.
-            В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными.
-            Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить
-            современную культуру.
-            Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
-          </h3>
+          <h3 class="about__title">Об аукционе</h3>
+          <p class="about__text">
+            <p>Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+            
+            <p class="about__text-part">Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
+          
         </div>
       </section>
     </main>
@@ -121,7 +150,9 @@
       <address class="address address__footer">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p>наб. Принсенграхт 263-265,<br> Амстердам</p>
+        <p>
+          наб. Принсенграхт 263-265, Амстердам
+        </p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__links-list">
@@ -139,22 +170,34 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a href="#0" class="footer__social-link">
-            <img src="/images/yt.svg" class="footer__social-icon" alt="Лого Ютуб">
+            <img
+              src="./images/yt.svg"
+              class="footer__social-icon"
+              alt="Лого Ютуб"
+              target="_blank"
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a href="#0" class="footer__social-link">
-            <img src="/images/vk.svg" class="footer__social-icon" alt="Лого Вконтакте">
+            <img
+              src="./images/vk.svg"
+              class="footer__social-icon"
+              alt="Лого Вконтакте"
+              target="_blank"
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a href="#0" class="footer__social-link">
-            <img src="/images/pinterest.svg" class="footer__social-icon" alt="Лого Пинтерест">
+          <a href="#0" class="footer__social-link" target="_blank">
+            <img
+              src="./images/pinterest.svg"
+              class="footer__social-icon"
+              alt="Лого Пинтерест"
+            />
           </a>
         </li>
       </ul>
-
     </footer>
   </body>
-
-  </html>
+</html>
