--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
 
@@ -29,8 +29,7 @@
         <img
           class="header__logo-image"
           src="./images/logo-black.svg"
-          alt="Логотип проекта оно тебе надо"
-        />
+          alt="Логотип проекта оно тебе надо">
       </a>
       <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -67,7 +66,6 @@
                 <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
-
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
@@ -83,7 +81,6 @@
                 <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
-
                 <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
@@ -99,11 +96,9 @@
             <a class="card__link" href="#0" target="_blank">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
-
                 <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
-
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
@@ -122,18 +117,16 @@
           <img
             src="./images/logo-white.svg"
             class="about__logo-img"
-            alt="Логотип проекта, белый"
-          />
+            alt="Логотип проекта, белый">
         </div>
         <div class="about__text">
           <h3 class="about__title">Об аукционе</h3>
-          <p class="about__text">
+          <div class="about__text">
             <p>Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
             один аукцион. Потому что кому нужен дневник девочки-подростка или
             картина, которую может нарисовать даже ребёнок? Кому нужны все эти
-            странные вещи, созданные любителями?
-            
+            странные вещи, созданные любителями?</p>
             <p class="about__text-part">Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
             Когда-то они казались просто неудачными. Но, несмотря на критику,
@@ -141,7 +134,7 @@
             представить современную культуру. Когда в эти вещи не верил никто,
             продолжали верить их создатели. И сейчас эти лоты стали культовыми.
           </p>
-          
+          </div>
         </div>
       </section>
     </main>
@@ -169,23 +162,21 @@
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a href="#0" class="footer__social-link">
+          <a href="#0" class="footer__social-link" target="_blank">
             <img
               src="./images/yt.svg"
               class="footer__social-icon"
               alt="Лого Ютуб"
-              target="_blank"
-            />
+              >
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a href="#0" class="footer__social-link">
+          <a href="#0" class="footer__social-link" target="_blank">
             <img
               src="./images/vk.svg"
               class="footer__social-icon"
               alt="Лого Вконтакте"
-              target="_blank"
-            />
+              >
           </a>
         </li>
         <li class="footer__social-list-item">
@@ -193,8 +184,7 @@
             <img
               src="./images/pinterest.svg"
               class="footer__social-icon"
-              alt="Лого Пинтерест"
-            />
+              alt="Лого Пинтерест">
           </a>
         </li>
       </ul>
